<resources>
    <string name="app_name">TravelMate</string>
    <string name="action_settings">Settings</string>
    <string name="textField">Hello! Please Login</string>
    <string name="submit_user">Login</string>
    <string name="register_user">Register</string>
    <string name="title_activity_client_view">ClientView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="acc_manage">Account Management</string>
    <string name="make_new_booking">Make a new booking</string>
    <string name="view_booking">View All Bookings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="thanks">Thanks!</string>
    <string name="email">Email (e.g janedoe@foo.com)</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="ccn">Credit Card Number</string>
    <string name="exp">Expiry Date (YYYY-MM-DD)</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="departure">Departure Date (YYYY-MM-DD)</string>
    <string name="pick_date">Pick date</string>
    <string name="destination_show">"Destination: "</string>
    <string name="origin_show">"Origin: "</string>
    <string name="time">"Time: "</string>
    <string name="cost">"Cost: "</string>
    <string name="apphead">Welcome To TravelMate.</string>
    <string name="flight_num">Flight Number</string>
    <string name="depart">Departure Date and Time</string>
    <string name="arrive">Arrival Date and Time</string>
    <string name="invalid_param">Invalid parameters, please retry.</string>
    <string name="title_activity_client_edit">ClientEditActivity</string>
    <string name="title_activity_flights_view">FlightsView</string>
    <string name="edit_client_info">Edit a client\'s information</string>
    <string name="edit_flight_info">Edit a flight\'s information</string>
    <string name="get_flight_info">Get a flight\'s information</string>
    <string name="get_client_info">Get a client\'s information</string>
    <string name="hi_admin">Welcome, Administrator.</string>
    <string name="enter_client_email">Enter the client\'s email address</string>
    <string name="enter_flight_number">Enter the flight number</string>
    <string name="update_flights">View and Edit all flights</string>
    <string name="itinerary">Itineraries</string>
    <string name="layover">"Layover of "</string>
    <string name="flight_time">"Flight Duration: "</string>
    <string name="airline">Airline</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="sort_by_time">Sort by Time</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_flight_edit">FlightEditActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_itineraries_view">ItinerariesView</string>
    <string name="title_activity_itinerary_view">ItineraryView</string>
    <string name="title_activity_admin_edit_flight">AdminEditFlight</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="upload_client_csv">upload Clients from CSV</string>
    <string name="upload_admin_csv">Upload Admins from CSV</string>
    <string name="upload_flight_csv">Upload Flights from CSV</string>
    <string name="upload">Upload</string>
    <string name="upload_admin_hint">\'Admins.txt\'</string>
    <string name="upload_flights_hint">\'Flights.csv\'</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_all_flights">All Flights</string>
    <string name="nav_search">Search Itineraries</string>
    <string name="nav_bookings">My Bookings</string>
</resources>