<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_bookings" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_search"/>
        <item
            android:id="@+id/nav_flights"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_all_flights" />

    </group>

    <item android:title="@string/acc_manage">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings"
                />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_logout"
                />
        </menu>
    </item>

</menu>
