<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:shownin="@layout/activity_main"
    tools:context=".gui.main.MainActivity" >

    <TextView android:id="@+id/welcome_message"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textColor="#d9d9d9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/apphead" />

    <EditText android:id="@+id/username"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>


    <EditText android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>


    <TextView android:id="@+id/failure"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#ff1a1a"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/invalid_param" />


    <Button android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit_user"
        android:textColor="#ffffff"
        android:theme="@style/AppTheme"
        android:background="#4da5ff"
        android:onClick="login"/>

    <Button android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register_user"
        android:textColor="#ffffff"
        android:theme="@style/AppTheme"
        android:background="#4da5ff"
        android:onClick="register"/>

</LinearLayout>
