<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".gui.admin.AdminView"
    tools:showIn="">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hi_admin"
        android:id="@+id/firstlastname"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_client_info"
        android:id="@+id/button"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:onClick="editClientInfo"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:text="@string/update_flights"
        android:id="@+id/AllFlightsFlight"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:onClick="viewAllFlights"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_client_csv"
        android:id="@+id/client_csv_button"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:onClick="uploadClientCsv"
        android:layout_marginTop="15dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_admin_csv"
        android:id="@+id/admin_csv_button"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:onClick="uploadAdminCsv"
        android:layout_marginTop="15dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_flight_csv"
        android:id="@+id/flights_csv_button"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:onClick="uploadFlightCsv"
        android:layout_marginTop="15dp" />

</LinearLayout>
