<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".gui.client.ClientView$SearchView"
        tools:showIn="@layout/activity_search"
        android:orientation="vertical">


        <TextView android:id="@+id/thanks"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/thanks" />

        <EditText android:id="@+id/origin_location"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin"/>

        <EditText android:id="@+id/destination_location"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"/>

        <EditText android:id="@+id/departure_date"
            android:layout_marginTop="10dp"
            android:inputType="number|numberSigned"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure"
                  android:digits="0123456789-"
                  android:minLines="1"
                  android:maxLength="10"/>

        <Button android:id="@+id/search_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:theme="@style/AppTheme"
            android:background="#4da5ff"
            android:onClick="getSearchParams"/>

    </LinearLayout>
</ScrollView>