<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".gui.admin.AdminEditClientView"
                tools:showIn="@layout/app_bar_edit_client">


    <Button
        android:id="@+id/submit_client"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/clientemail"
        android:layout_marginTop="86dp"
        android:background="#4da5ff"
        android:onClick="searchClient"
        android:text="@string/submit"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/clientemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/enter_client_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/morefailure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/clientemail"
        android:text="@string/invalid_param"
        android:textColor="#ff1a1a"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/firstlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="53dp"
        android:text="@string/hi_admin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"/>

</RelativeLayout>
