<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".gui.admin.UploadAdminActivity"
    android:orientation="vertical">

    <EditText android:id="@+id/upload_admin_filepath"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/upload_admin_hint"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/upload_admin_submit"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="uploadAdmin" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/upload_admin_back"
        android:background="#4da5ff"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="uploadAdminBack" />

    <TextView
        android:id="@+id/admin_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</LinearLayout>
